# vouch

./: .gitignore  DEPLOY.md  README.md  docker-compose.yml  render.yaml
.github/workflows/: keep-warm.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: main.py  serializers.py
backend/app/ai/: compare.py  provider.py
backend/app/api/: health.py  recommend.py  repo.py  search.py
backend/app/core/: config.py
backend/app/models/: schemas.py
backend/app/services/: __init__.py  cache.py  filters.py  pc_fit.py  pipeline.py  report.py  safety.py  score.py  search.py
backend/tests/: conftest.py  test_ai_compare.py  test_ai_provider.py  test_api_health.py  test_api_recommend.py  test_api_repo.py  test_api_search.py  test_filters.py  test_main_run.py  test_pc_fit.py  test_score.py  test_search_ratelimit.py  test_serializer.py
docs/plans/: 2026-06-20-vouch-ai-layer.md  2026-06-20-vouch-deploy.md  2026-06-20-vouch-foundation.md  2026-06-20-vouch-frontend-core.md  2026-06-20-vouch-seo-pages.md  2026-06-21-vouch-autonomous-deploy.md
docs/specs/: 2026-06-20-vouch-design.md
frontend/: .env.local.example  .env.production.example  README.md  package-lock.json  package.json
frontend/app/: layout.tsx  opengraph-image.tsx  page.tsx  sitemap.ts
frontend/components/: AIRecommend.tsx  RepoCard.tsx  ScoreBar.tsx  ScoreCard.tsx  SplashScreen.tsx  Stars.tsx  SupportButton.tsx  VsComparison.tsx
frontend/lib/: api.ts  comparisons.ts  format.ts
frontend/public/: llms.txt
strategy/: 90-day-sprint.md  accelerator-tracker.md
(+15 files in other folders)
